--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "homepage": "https://myhomepage.app",
   "scripts": {
-    "start": "node server.js",
-    "nodemon": "nodemon server.js",
+    "start": "node index.js",
+    "nodemon": "nodemon index.js",
     "lint": "eslint ."
   },
   "repository": {
