--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap-icons": "^1.10.5",
     "nodemon": "^3.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
