--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
+    "jwt-decode": "^3.1.2",
     "nodemon": "^3.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
