--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
     "nodemon": "^3.0.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vite": "^4.4.6",
+    "@vitejs/plugin-vue": "^4.2.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
-    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-vue": "^9.15.1",
-    "prettier": "^3.0.0",
-    "vite": "^4.4.6"
+    "prettier": "^3.0.0"
   }
 }
