--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     "url": "https://github.com/rich-fs/myhomepage.app/issues"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@vitejs/plugin-vue": "^4.2.3",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.10.5",
     "jwt-decode": "^3.1.2",
     "nodemon": "^3.0.1",
     "pinia": "^2.1.6",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
     "vite": "^4.4.6",
-    "@vitejs/plugin-vue": "^4.2.3"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
@@ -41,6 +43,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-vue": "^9.15.1",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "sass": "^1.68.0"
   }
 }
